src/objects/saBusinessLocationMembers__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLocation__c</fullName>
        <label>拠点</label>
        <referenceTo>saBusinessLocation__c</referenceTo>
        <relationshipLabel>拠点詳細</relationshipLabel>
        <relationshipName>saBusinessLocationDetail_md</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>拠点種別</label>
        <picklist>
            <picklistValues>
                <fullName>PRINCIPAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECONDARY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saBusinessLocationDetail_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>拠点詳細</label>
    <nameField>
        <displayFormat>BLM-{00000000}</displayFormat>
        <label>拠点詳細 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>